# research-work-archive-artifacts

./: README.md
archive/: .gitignore
archive/2024/: README.md
archive/2024/winter/bsc_dichler/: .gitignore  README.md
archive/2024/winter/bsc_dichler/scripts/: experiments.py  main.py
archive/2024/winter/bsc_jiang_microarchitectural_analysis_of_cheri_on_the_morello_platform/: .gitignore  PROGRESS.md  README.md  flake.nix  justfile
archive/2024/winter/bsc_jiang_microarchitectural_analysis_of_cheri_on_the_morello_platform/instructions/: instructions.py  instructions_nocap.c  instructions_nocap.s  instructions_purecap.c  instructions_purecap.s
archive/2024/winter/bsc_jiang_microarchitectural_analysis_of_cheri_on_the_morello_platform/memory_latency/: memory_latency.c  memory_latency_hybrid.c  memory_latency_plot.py
archive/2025/: README.md
archive/2025/summer/bsc_bambou/: README.md  evaluation_utils.ipynb
archive/2025/summer/bsc_ge/: LICENSE  README.md
archive/2025/summer/bsc_gerg/: README.md  pyproject.toml
archive/2025/summer/bsc_gerg/src/knowledge/llm/: lemmatize.py
archive/2025/summer/bsc_grigorova/: README.md
archive/2025/summer/bsc_grigorova/osv/: LICENSE
archive/2025/summer/bsc_jaecklein/: .README.md.swp  LICENSE  README.md  qemu-run.sh
archive/2025/summer/bsc_jaecklein/benchmark_scripts/: bounce-buffer.expect  crypto.expect  dma.expect  mmio-pie.expect
archive/2025/summer/bsc_jaecklein/benchmarks/: mmio.expect
archive/2025/summer/bsc_karidas/: README.md
archive/2025/summer/bsc_krinitsin/bug_analysis/: LICENSE
archive/2025/summer/bsc_krinitsin/miasm/: pyproject.toml
archive/2025/summer/bsc_krinitsin/miasm/miasm/arch/x86/: arch.py  sem.py
archive/2025/summer/bsc_krinitsin/miasm/test/arch/x86/: arch.py
archive/2025/summer/msc_berkay_eren_ueruen/: .clang-format  .gitignore  .gitmodules  README.md  cuda-shell.nix  flake.nix  nvidia.nix
archive/2025/summer/msc_berkay_eren_ueruen/benchmarks/: README.md  bench-shell.nix  bench_main.sh  bench_native.nix  bench_native_base.sh  bench_vm.nix  bench_vm.sh  commands.sh  config.sh  profile.cu
archive/2025/summer/msc_berkay_eren_ueruen/intervm_comm/: Makefile  README.md
archive/2025/summer/msc_berkay_eren_ueruen/pyplots/: 16-clients-long.py  context_switch.py  context_switch_combi.py  context_switch_ctx.py  host_effect.py  host_effect_seperat.py  implementation_overhead.py  llama_bench_overhead.py  mock_app_scalability.py  mock_impact.py  mock_overhead.py  scaling.py  scaling_bar.py  scheduler_n_tokens.py  server_client_overhead.py
archive/2025/summer/msc_berkay_eren_ueruen/qemu_scripts/: bind.sh  start_qemu.sh  start_qemu_no_gpu.sh  unbind.sh
archive/2025/summer/msc_choi/: Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
archive/2025/summer/msc_choi/codegen/: Cargo.toml
archive/2025/summer/msc_choi/lifter/: Cargo.toml  build.rs  perf.data
archive/2025/summer/msc_choi/lifter/results/: benchmark_instructions.csv  benchmark_instructions_manual.csv  benchmark_objdump.sh  benchmark_sightglass.csv  benchmark_sightglass_objdump.csv  compare.py  plot.py  reorder.py
archive/2025/summer/msc_choi/lifter/src/: lib.rs  main.rs
archive/2025/summer/msc_choi/lifter/src/arm64/: mod.rs
archive/2025/summer/msc_choi/lifter/src/arm64/common/: helpers.rs  mod.rs  types.rs
archive/2025/summer/msc_choi/lifter/src/arm64/decode/: bitreader.rs  decoder.rs  helpers.rs  mod.rs
archive/2025/summer/msc_choi/lifter/src/arm64/lift/: helpers.rs  lifter.rs  mod.rs  types.rs
archive/2025/summer/msc_choi/lifter/tests/: mod.rs
archive/2025/summer/msc_choi/lifter/tests/common/: lib.rs  mod.rs  simple_variable_map.rs
archive/2025/summer/msc_choi/lifter/tests/completeness/: missing_instructions.rs  mod.rs
archive/2025/summer/msc_choi/lifter/tests/lifter/: mod.rs  yaml_tests.rs
archive/2025/summer/msc_choi/lifter/tests/lifter/insts/tests/: adc.yaml  adcs.yaml  add.yaml  adds.yaml  adr.yaml  adrp.yaml  and.yaml  ands.yaml  asrv.yaml  b.yaml  bcc.yaml  bfm.yaml  bic.yaml  bl.yaml  blr.yaml  br.yaml  cbnz.yaml  cbz.yaml  ccmn.yaml  ccmp.yaml  cls.yaml  clz.yaml  consecutive.yaml  csel.yaml  csinc.yaml  csinv.yaml  csneg.yaml  eon.yaml  eor.yaml  extr.yaml  ldar.yaml  ldarb.yaml  ldarh.yaml  ldp.yaml  ldpsw.yaml  ldr.yaml  ldrb.yaml  ldrh.yaml  ldrsb.yaml  ldrsh.yaml  (+39 more)
archive/2025/summer/msc_kreutzer/: README.md
archive/2025/winter/bsc_barinov/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  flake.nix  test_runner.py
archive/2025/winter/bsc_barinov/benchmarks/: bench_config.json  binary_sizes_table.tex  compute_metrics.py  plot_benchmark_selection.py  plot_benchmarks.py  plot_binary_sizes.py  polybench.c  run_native_benchmarks.py  run_qemu_benchmarks.py  run_translated_benchmarks.py
archive/2025/winter/bsc_barinov/benchmarks/polybench_tests/: 2mm.c  3mm.c  atax.c  bicg.c  doitgen.c  floyd-warshall.c  gemm.c  gemver.c  gesummv.c  mvt.c  nussinov.c  symm.c  syr2k.c  syrk.c  trmm.c
archive/2025/winter/bsc_barinov/runtime/: CMakeLists.txt
archive/2025/winter/bsc_barinov/runtime/include/: ArmSyscall.h  Util.h
archive/2025/winter/bsc_barinov/runtime/src/: Exceptions.cpp  runtime.cpp
archive/2025/winter/bsc_barinov/tests/: c_main_factorial.c  cfactorial.c  factorial.c  globals.c  mergesort.c  mergesort_fancy.c  simplest_function_call.c  string  string.c
archive/2025/winter/bsc_barinov/translator/: CMakeLists.txt
archive/2025/winter/bsc_barinov/translator/include/: HeaderParser.h  LifterHelper.h
archive/2025/winter/bsc_barinov/translator/src/: HeaderParser.cpp  LifterHelper.cpp  sgtranslator.cpp
archive/2025/winter/bsc_trost/: README.md
archive/2025/winter/gr_krinitsin/miasm/: MANIFEST.in  flake.nix  pyproject.toml
archive/2025/winter/gr_krinitsin/miasm/src/miasm/arch/aarch64/: arch.py  sem.py
archive/2025/winter/gr_krinitsin/miasm/src/miasm/arch/x86/: arch.py  regs.py  sem.py
archive/2025/winter/gr_krinitsin/miasm/test/arch/aarch64/: arch.py
archive/2025/winter/msc_wegmann/: README.md  install.sh  pyproject.toml  requirements.txt
(+346 files in other folders)
