[package]
name = "lifter"
version = "0.1.0"
edition = "2021"

[dependencies]
filecheck = "0.5.0"
num-bigint = "0.4.6"
target-lexicon = "0.13.1"
thiserror = "2.0.11"
tnj = { git = "ssh://git@github.com/TUM-DSE/tnj.git", branch = "main", version = "0.3.0" }
num-traits = "0.2.19"
strum_macros = "0.27.1"
strum = "0.27.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
once_cell = "1.21.3"
elf = "0.7.4"
indicatif = "0.17.11"
rayon = "1.10.0"

[build-dependencies]
codegen = { version = "0.1.0", path = "../codegen" }
prettier-please = { version = "0.3.0" }
quote = "1.0.40"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2.0.100" }
